# garagemGusba

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_categoria.py  0002_rename_modelo_veiculo_modelor.py  0002_veiculo_imagem.py  0003_acessório_cor_veículo.py  0003_rename_modelor_veiculo_modelo.py  0004_alter_cor_options.py  0004_alter_marca_nome.py  0005_alter_veiculo_descricao.py  0005_rename_acessório_acessorio_rename_veículo_veiculo_and_more.py
garagem/models/: acessorio.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  veiculo.py
garagem/views/: modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
